@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.7 to v2.4.8
+- Ignore switches that reference unknown textures instead of exiting
 - Fix crash when loading maps with missing player starts
 - Fix crash when reloading network savegames (bug #1590350)
 - Fix bug in transparency rendering caused by doing it in two places
